deployment/monitoring/grafana/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  gateways:
  - istio-system/istio-ingressgateway
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /grafana/
    rewrite:
      uri: /
    route:
    - destination:
        host: grafana.monitoring.svc.cluster.local
        port:
          number: 3000
      headers:
        response:
          set:
            X-Frame-Options: "SAMEORIGIN"   
            Access-Control-Allow-Origin: "https://mlops.local"
            Access-Control-Allow-Credentials: "true"
    headers:
      request:
        set:
          X-Forwarded-Prefix: "/grafana/"
    corsPolicy:
      allowOrigins:
        - exact: "https://mlops.local"
      allowMethods:
        - GET
        - POST
        - OPTIONS
      allowCredentials: true
